plugins {
    id 'com.android.application'
}

android {
    signingConfigs {
        if(project.hasProperty('RELEASE_STORE_FILE')){
            debug {
                storeFile file(RELEASE_STORE_FILE)
                storePassword(RELEASE_STORE_PASSWORD)
                keyAlias(RELEASE_KEY_ALIAS)
                keyPassword(RELEASE_KEY_PASSWORD)
                v1SigningEnabled true
                v2SigningEnabled true
            }
        } else {
            debug {
                storeFile file('../gradle/debug.keystore')
                storePassword('android')
                keyAlias('androiddebugkey')
                keyPassword('android')
                v1SigningEnabled true
                v2SigningEnabled true
            }
        }
    }
    compileSdk 33

    defaultConfig {
        applicationId "com.xayup.multipad.development"
        minSdk 23 //Android M
        targetSdk 33
        versionCode 230712        //year, month, day
        versionName "3.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    
    compileOptions {
		sourceCompatibility JavaVersion.VERSION_11
		targetCompatibility JavaVersion.VERSION_11
	}
	
	buildFeatures {
        viewBinding true
    }
}

dependencies {
    //implementation 'androidx.appcompat:appcompat:1.4.2'
    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    //implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.core:core:1.10.1'
    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.0'
    implementation project(':ui')
    //compile(name:'oboe-1.7.0', ext:'aar')
}
